compiler/testData/diagnostics/tests/j+k/collectionOverrides/containsAndOverload.diag.txt
/main.kt:19:16: error: the integer literal does not conform to the expected type String!
    a.contains(1)
               ^
/main.kt:21:5: error: the integer literal does not conform to the expected type String!
    1 in a
    ^
/main.kt:24:17: error: the integer literal does not conform to the expected type String
    ka.contains(1)
                ^
/main.kt:26:5: error: the integer literal does not conform to the expected type String
    1 in ka
    ^

